# BraneEngine

./: .clang-format  .gitignore  3  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
libraries/lib/win64/: CMakeLists.txt
libraries/lib/win64/shared/: CMakeLists.txt
libraries/lib/win64/shared/vulkan/: CMakeLists.txt
src/: CMakeLists.txt  braggingStats.py
src/assetServer/: CMakeLists.txt  InstallDB.cmake  assetServer.cpp  assetServer.h  config.json  main.cpp
src/assetServer/database/: CMakeLists.txt  PreppedSQLCall.h  data.db  database.cpp  database.h  databaseAsset.h
src/client/: CMakeLists.txt  client.cpp  client.h  config.json  main.cpp
src/common/assets/: CMakeLists.txt  assembly.cpp  assembly.h  asset.cpp  asset.h  assetID.cpp  assetID.h  assetManager.cpp  assetManager.h  assetType.cpp  assetType.h  chunk.cpp  chunk.h
src/common/assets/types/: CMakeLists.txt  componentAsset.cpp  componentAsset.h  imageAsset.cpp  imageAsset.h  materialAsset.cpp  materialAsset.h  meshAsset.cpp  meshAsset.h  scriptAsset.cpp  scriptAsset.h  shaderAsset.cpp  shaderAsset.h
src/common/chunk/: CMakeLists.txt  chunkLoader.cpp  chunkLoader.h
src/common/config/: CMakeLists.txt  config.cpp  config.h
src/common/ecs/: StructMembers.py  archetype.cpp  archetype.h  archetypeManager.cpp  archetypeManager.h  chunk.cpp  chunk.h  component.cpp  component.h  componentManager.h  componentSet.cpp  componentSet.h  entity.cpp  entity.h  entityID.h  entitySet.cpp  entitySet.h  nativeComponent.h  structMembers.h  system.h  systemManager.cpp  systemManager.h  virtualType.cpp  virtualType.h
src/common/ecs/nativeTypes/: assetComponents.h  meshRenderer.h
src/common/fileManager/: CMakeLists.txt  fileManager.cpp  fileManager.h  fileWatcher.cpp  fileWatcher.h
src/common/graphics/: CMakeLists.txt  camera.cpp  camera.h  graphics.cpp  graphics.h  graphicsBuffer.cpp  graphicsBuffer.h  graphicsDevice.cpp  graphicsDevice.h  material.cpp  material.h  mesh.cpp  mesh.h  pointLightComponent.h  renderTarget.cpp  renderTarget.h  renderer.cpp  renderer.h  sceneRenderer.cpp  sceneRenderer.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  texture.cpp  texture.h  validationLayers.h  window.cpp  window.h
src/common/input/: input.h
src/common/networking/: CMakeLists.txt  connection.cpp  connection.h  message.h  networking.cpp  networking.h
src/common/runtime/: logging.cpp  logging.h  module.h  runtime.cpp  runtime.h  timeline.cpp  timeline.h
src/common/scripting/: scripting.cpp  scripting.h
src/common/systems/: transforms.cpp  transforms.h
src/common/ui/: CMakeLists.txt  gui.cpp  gui.h  guiEvent.h  guiPopup.h  guiRenderer.cpp  guiRenderer.h  guiWindow.cpp  guiWindow.h
src/common/utility/: CMakeLists.txt  assert.h  asyncData.h  asyncQueue.h  clock.h  enumNameMap.h  event.h  hex.h  inlineArray.h  jsonSerializer.cpp  jsonSerializer.h  jsonTypeUtilities.h  jsonVersioner.cpp  jsonVersioner.h  mutex.h  option.h  result.h  serializedData.cpp  serializedData.h  shared.h  sharedRecursiveMutex.cpp  sharedRecursiveMutex.h  sptr.h  staticIndexVector.h  strCaseCompare.h  threadPool.cpp  threadPool.h  uuid.cpp  uuid.h
src/editor/: CMakeLists.txt  assetIndexer.cpp  assetIndexer.h  braneProject.cpp  braneProject.h  editor.cpp  editor.h  editorEvents.cpp  editorEvents.h  serverFilesystem.cpp
src/editor/assets/: CMakeLists.txt  assemblyBuilder.cpp  assemblyBuilder.h  assemblyReloadManager.cpp  assemblyReloadManager.h  assetCache.cpp  assetCache.h  assetIndexer.cpp  assetIndexer.h  editorAsset.cpp  editorAsset.h  gltfLoader.cpp  gltfLoader.h  jsonVirtualType.cpp  jsonVirtualType.h
src/editor/assets/sources/: assemblySource.h  assetSource.cpp  assetSource.h  chunkSource.h  editorAssemblyAsset.cpp  editorAssemblyAsset.h  editorChunkAsset.cpp  editorChunkAsset.h  editorImageAsset.cpp  editorImageAsset.h  editorMaterialAsset.cpp  editorMaterialAsset.h  editorScriptAsset.cpp  editorScriptAsset.h  editorShaderAsset.cpp  editorShaderAsset.h  gltfSource.h  imageSource.cpp  imageSource.h  materialSource.h  scriptSource.h  shaderSource.h
src/editor/assets/types/: editorAssemblyAsset.cpp  editorAssemblyAsset.h  editorChunkAsset.cpp  editorChunkAsset.h  editorImageAsset.cpp  editorImageAsset.h  editorMaterialAsset.cpp  editorMaterialAsset.h  editorScriptAsset.cpp  editorScriptAsset.h  editorShaderAsset.cpp  editorShaderAsset.h
src/editor/defaultAssets/: defaultProjectFile.brane
src/editor/defaultAssets/shaders/: lighting.glsl
src/editor/graphics/: CMakeLists.txt  shaderCompiler.cpp  shaderCompiler.h
src/editor/state/: CMakeLists.txt  trackedObject.cpp  trackedObject.h  trackedValue.cpp  trackedValue.h  versioning.cpp  versioning.h
src/editor/widgets/: assetBrowserWidget.cpp  assetBrowserWidget.h  assetSearchWidget.cpp  assetSearchWidget.h  assetSelectWidget.cpp  assetSelectWidget.h  virtualVariableWidgets.cpp  virtualVariableWidgets.h
src/editor/windows/: CMakeLists.txt  assetBrowserWindow.h  consoleWindow.cpp  consoleWindow.h  createAssetWindow.cpp  createAssetWindow.h  dataWindow.cpp  dataWindow.h  editorWindow.h  entitiesWindow.cpp  entitiesWindow.h  memoryManagerWindow.cpp  memoryManagerWindow.h  renderWindow.cpp  renderWindow.h  selectProjectWindow.cpp  selectProjectWindow.h  syncWindow.cpp  syncWindow.h
src/editor/windows/dataViews/: dataView.h  imageMetadataView.cpp  imageMetadataView.h
src/runtimeServer/: CMakeLists.txt  main.cpp  runtimeServer.cpp  runtimeServer.h
src/tests/: CMakeLists.txt
src/tests/assets/: assetsTest.cpp
src/tests/ecs/: ecsProfiling.cpp  ecsTest.cpp
src/tests/networking/: networking.cpp
src/tests/utility/: threadPool.cpp  versionedJson.cpp
